# PS4_Stereo_ROS_SLAM

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  package.xml  ros_entrypoint.sh
Firmware_loader/: ps4eye_init.py
launch/: psvr_launch.launch  psvr_launch_static_image.launch
src/: psvr_cam_publisher.py
