<?xml version="1.0"?>
<package format="2">
  <name>PSVR_cam_core</name>
  <version>0.0.0</version>
  <description>The PSVR_cam_core package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="an.spanos@gmail.com">Antonis Spanos</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/Beyond-Robotics/PS4_Stereo_ROS_SLAM</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>
</package>
